homework8/manifests/4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw8-deployment-app
  labels:
    app: app-hw8-app
spec:
  selector:
    matchLabels:
      app: app-hw8-app
  replicas: 1
  template:
    metadata:
      labels:
        app: app-hw8-app
    spec:
      containers:            
        - image: kochnevd/course-microservices:service-hw8-app
          imagePullPolicy: Always
          name: service-hw8-app-container
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 15

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw8-deployment-billing
  labels:
    app: app-hw8-billing
spec:
  selector:
    matchLabels:
      app: app-hw8-billing
  replicas: 1
  template:
    metadata:
      labels:
        app: app-hw8-billing
    spec:
      containers:            
        - image: kochnevd/course-microservices:service-hw7-billing
          imagePullPolicy: Always
          name: service-hw8-billing-container
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 15

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw8-deployment-notifications
  labels:
    app: app-hw8-notifications
spec:
  selector:
    matchLabels:
      app: app-hw8-notifications
  replicas: 1
  template:
    metadata:
      labels:
        app: app-hw8-notifications
    spec:
      containers:            
        - image: kochnevd/course-microservices:service-hw7-notifications
          imagePullPolicy: Always
          name: service-hw8-notifications-container
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 15
